Fixing social media icons overflowing on mobile.

--- a/cabbys-client/src/Styles/About.scss
+++ b/cabbys-client/src/Styles/About.scss
@@ -12,7 +12,6 @@
   height: 50px;  
   max-width: 600px; 
   width: 100%;
-  margin: 0 auto;
   text-align: center;
   
   .icon {
@@ -52,7 +51,7 @@
 
 .contact-text {
   text-align: center;
-  height: 80%;
+  height: 70%;
 }
 
 .contact-text h1 {
